# Qt-PID-Analyzer

./: .gitignore  .gitmodules  README.en.md  README.md  pyproject.toml  requirements.txt  run.py
app/: log_tree.py  main.py  mainwindow.py  plot_viewer.py  storage.py  worker.py
scripts/: build_blackbox.bat  build_blackbox.sh  check_deps.py
